aligned nav right with title, fixed signin style

--- a/src/Components/IndeedClone/indeed.module.css
+++ b/src/Components/IndeedClone/indeed.module.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     background-color: #fff;
 }
@@ -17,4 +12,8 @@ body {
 
 .employers-text {
     color: #000;
+}
+
+.styleLinks {
+    padding: 1em;
 }
