--- a/src/Components/Navigation/NavStyle.module.css
+++ b/src/Components/Navigation/NavStyle.module.css
@@ -1,129 +1,26 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    position: relative;
-    background-color: #000;
-    font-family: 'Martel Sans', sans-serif;
-    font-size: 16px;
-}
-
-a {
-    text-decoration: none;
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
-}
-
-.style-background {
-    background-color: #000;
-    color: #fff;
-}
-
 .header-title {
     color: #e50914;
     line-height: normal;
     font-size: 34px;
 }
 
-.btn-nx-clone {
-    background-color: #e50914;
-    color: #fff;
-    line-height: normal;
-    padding: 7px 17px;
-    font-weight: 400;
-    font-size: 1rem;
-    border-radius: 3px;
-}
-
-.hero-container {
+.style-links ul {
     display: flex;
-    justify-content: center;
-    flex-flow: column;
-    align-items: center;
-    margin-top: 1rem;
-    padding: 75px 0;
+    list-style-type: none;
 }
 
-.subtitle {
+.style-links li {
     display: flex;
-    text-align: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 0px 10px;
+}
+
+.style-links a {
     color: #fff;
-    width: 640px;
-    margin: 1rem auto;
 }
 
-.subtitle-h1 {
-    font-weight: bold;
-}
-
-.subtitle-email-text {
-    align-items: center;
-    justify-content: center;
-}
-
-.subtitle a {
-    color: #fff;
-    margin-left: 4px;
-}
-
-h3 {
-    font-size: 18px;
-}
-
-form .align-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.sub-hero-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.style-email-input {
-    height: 60px;
-    width: 500px;
-    padding-left: 5px;
-}
-
-.style-email-input:focus {
-    outline-color: #0071eb;
-}
-
-.placeholder-label {
-    position: relative;
-    left: -30.8rem;
-    transition: font .1s ease, top .1s ease, transform .1s ease, -webkit-transform .1s ease, -moz-transform .1s ease, -o-transform .1s ease;
-    background-color: transparent;
-    pointer-events: none;
-    color: #000;
-}
-
-.style-email-input:focus~.placeholder-label,
-.style-email-input:not(:placeholder-shown).style-email-input:not(:focus)~.placeholder-label {
-    top: -1rem;
-}
-
-.style-submit {
-    height: 60px;
-    background-color: #e50914;
-    color: #fff;
-    font-weight: 400;
-    box-shadow: 0 1px 0 rgb(0 0 0 / 45%);
-    min-width: 74px;
-    padding: 0 1em;
-}
-
-.style-submit:hover {
-    background-color: #f40612;
-    box-shadow: 0 1px 0 rgb(0 0 0 / 45%);
+.style-links ul li:hover,
+.style-links ul li:hover a {
+    color: #b3b3b3;
 }
