--- a/src/home.module.css
+++ b/src/home.module.css
@@ -16,8 +16,8 @@ a {
 
 .container {
     display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
+    justify-content: flex-start;
+    padding: 10px;
 }
 
 .style-background {
@@ -31,7 +31,10 @@ a {
     font-size: 34px;
 }
 
-.btn-nx-clone {
+.btn-signin {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
     background-color: #e50914;
     color: #fff;
     line-height: normal;
@@ -39,6 +42,8 @@ a {
     font-weight: 400;
     font-size: 1rem;
     border-radius: 3px;
+    border-style: none;
+    height: 34px;
 }
 
 .hero-container {
@@ -48,17 +53,15 @@ a {
     align-items: center;
     margin-top: 1rem;
     padding: 75px 0;
+    border-bottom: 8px solid #222;
 }
 
 .subtitle {
     text-align: center;
+    align-items: center;
     color: #fff;
     width: 640px;
     margin: 1rem auto;
-}
-
-.subtitle-h1 {
-    font-weight: bold;
 }
 
 .subtitle a {
@@ -72,17 +75,19 @@ h3.subtitle-email-text {
     text-align: center;
 }
 
-form .align-form {
+form {
+    display: inline-block;
+}
+
+.align-form {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
 }
 
 .style-email-input {
-    display: inline-block;
+    padding-left: 5px;
     height: 60px;
     width: 500px;
-    padding-left: 5px;
 }
 
 .style-email-input:focus {
@@ -90,8 +95,9 @@ form .align-form {
 }
 
 .placeholder-label {
-    position: relative;
-    left: -38.8rem;
+    position: absolute;
+    margin-left: -38.5rem;
+    margin-top: 1em;
     transition: font .1s ease, top .1s ease, transform .1s ease, -webkit-transform .1s ease, -moz-transform .1s ease, -o-transform .1s ease;
     background-color: transparent;
     pointer-events: none;
@@ -100,11 +106,11 @@ form .align-form {
 
 .style-email-input:focus~.placeholder-label,
 .style-email-input:not(:placeholder-shown).style-email-input:not(:focus)~.placeholder-label {
-    top: -1rem;
+    margin-top: 0.5px;
+    font-size: 14px;
 }
 
 .style-submit {
-    display: inline-block;
     height: 60px;
     background-color: #e50914;
     color: #fff;
